feat: HTTP endpoints added
